# space_data

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: daily_refresh.yml  fly-deploy.yml  tests.yml
alembic/: env.py
alembic/versions/: 1eb1a3d4cc4d_add_object_type_to_satellites.py  529bf6dd2754_enable_row_level_security_on_all_tables.py  5e6422da0f8c_add_api_keys_table.py  7acf879a34d7_add_request_log_table.py  941ba92e9c91_hash_api_keys_add_key_hash_and_key_.py  afa7dcfa4fe2_initial_schema.py  ed6655be8857_add_launch_window_to_launches_table.py
data/: upcoming_launches.json
docs/: MVP.md  phase_a_log.md  phase_b_log.md  phase_c_log.md  sprint_plan.md  test_coverage.md
src/: admin.py
src/api/: auth.py  logging_middleware.py  main.py  rate_limit.py  schemas.py
src/api/routes/: launches.py  satellites.py
src/db/: connection.py  models.py
src/ingestion/: constellations.py  launches.py  operators.py  purposes.py  refresh.py  satcat.py  spacetrack.py  ucs.py  upcoming.py
src/space_data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_auth.py  test_launches.py  test_satellites.py  test_utils.py
